[package]
name = "cw-alliance-hub"
version = "0.1.0"
authors = ["emidev98"]
edition = "2021"
rust-version = "1.65"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
terra-proto-rs = {version = "3.0.1", default-features = false}
cosmwasm-schema = "1.1.3"
cosmwasm-std = {version = "1.1.3", features = ["stargate", "staking"]}
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw721-metadata-onchain = "0.15.0"
cw721 = "0.17.0"

[dev-dependencies]
cw-multi-test = "0.16.2"

[build]
target = "wasm32-unknown-unknown"
