[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/emidev98/cw-alliance-hub"
homepage      = "https://github.com/emidev98/cw-alliance-hub"
documentation = "https://github.com/emidev98/cw-alliance-hub"
rust-version  = "1.65"

[workspace.dependencies]
cosmwasm-schema             = "1.1.3"
cosmwasm-std                = "1.1.3"
cw2                         = "1.0.1"
cw20                        = "1.0.1"
cw721                       = "0.17.0"
cw721-progressive-metadata  = { path = "./contracts/cw721-progressive-metadata" }
cw-multi-test               = "0.16.2"
cw-ownable                  = "0.5.0"
cw-storage-plus             = "1.0.1"
schemars                    = "0.8.11"
serde                       = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror                   = "1.0.38"
terra-proto-rs              = { version = "3.0.1", default-features = false}
cw-utils                    = "1.0.1"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
