[package]
name = "cw-alliance-hub"
authors = ["emidev98"]
description   = "Smart contract based on x/alliance module to delegate redeem an NFT and use it to claim rewards"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
terra-proto-rs  = { workspace = true}
cw721-progressive-metadata = { workspace = true}

[dev-dependencies]
cw-multi-test   = { workspace = true }